<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15dp"
    tools:context=".activities.SignUpActivity">

    <ImageView
        android:onClick="closeActivity"
        android:layout_gravity="end"
        android:padding="10dp"
        android:src="@drawable/icon_close_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/getting_started"
        android:textSize="26sp"
        fontPath="fonts/PoppinsBold.ttf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:ignore="MissingPrefix" />

    <TextView
        android:text="@string/create_an_account_to_continue"
        android:textSize="13sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <TextView
        android:text="@string/full_names"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/sign_up_screen_etFullNames"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"/>
    <TextView
        android:text="@string/nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/sign_up_screen_etNickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="10dp"/>
    <TextView
        android:text="@string/cellphone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <EditText
        android:id="@+id/sign_up_screen_etCellphoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"/>
    <CheckBox
        android:id="@+id/sign_up_screen_cbTerms"
        android:text="@string/terms_and_conditions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"/>

    <Button
        android:id="@+id/sign_up_screen_btnContinue"
        android:background="@drawable/round_primary_button"
        android:text="Continue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"/>

    <TextView
        android:layout_gravity="center_horizontal"
        android:text="Already have an account? SIGN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"/>

    <TextView
        android:layout_gravity="center_horizontal"
        android:text="OR"
        android:textSize="18sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="15dp"/>

    <Button
        android:id="@+id/sign_up_screen_btnContinueFacebook"
        android:background="#3b5998"
        android:text="Continue with Facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>