<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.FanStoriesFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:padding="5dp"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:src="@drawable/default_profile_photo"
                app:civ_circle_background_color="@color/white"
                app:civ_border_width="2dp"
                app:civ_border_color="#FFF"/>

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:padding="5dp"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:src="@drawable/default_profile_photo"
                app:civ_circle_background_color="@color/white"
                app:civ_border_width="2dp"
                app:civ_border_color="#FFF"/>

            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:padding="5dp"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:src="@drawable/default_profile_photo"
                app:civ_circle_background_color="@color/white"
                app:civ_border_width="2dp"
                app:civ_border_color="#FFF"/>
            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:padding="5dp"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:src="@drawable/default_profile_photo"
                app:civ_circle_background_color="@color/white"
                app:civ_border_width="2dp"
                app:civ_border_color="#FFF"/>
            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:padding="5dp"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:src="@drawable/default_profile_photo"
                app:civ_circle_background_color="@color/white"
                app:civ_border_width="2dp"
                app:civ_border_color="#FFF"/>
            <de.hdodenhof.circleimageview.CircleImageView
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:padding="5dp"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="5dp"
                android:src="@drawable/default_profile_photo"
                app:civ_circle_background_color="@color/white"
                app:civ_border_width="2dp"
                app:civ_border_color="#FFF"/>

        </LinearLayout>
        <TextView
            android:id="@+id/fragment_fan_stories_tv_latest_stories_label"
            android:text="Latest Fan Stories"
            android:textSize="16sp"
            fontPath="fonts/PoppinsBold.ttf"
            android:layout_width="match_parent"
            android:layout_marginLeft="15dp"
            android:layout_height="wrap_content"
            tools:ignore="MissingPrefix"
            android:layout_marginStart="15dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:background="@color/black"
            android:visibility="gone"
            android:id="@+id/fragment_fan_stories_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/fragment_fan_stories_loading"
        android:layout_centerInParent="true"
        android:gravity="center_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/fragment_fan_stories_progress_bar"
            android:layout_width="50dp"
            android:layout_height="50dp"/>
        <TextView
            android:layout_marginTop="5dp"
            android:textSize="12sp"
            android:text="@string/please_wait"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <TextView
        android:visibility="gone"
        android:id="@+id/row_fan_post_tv_message"
        android:textSize="22sp"
        android:layout_centerInParent="true"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:id="@+id/fragment_fan_stories_no_data_layout"
        android:layout_width="match_parent"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/no_fan_stories"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ImageView
            android:src="@drawable/no_news"
            android:layout_width="200dp"
            android:layout_height="200dp"/>

        <TextView
            android:textAlignment="center"
            android:padding="20dp"
            android:text="@string/no_story_body"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" />

        <Button
            android:text="@string/post_fan_story"
            android:id="@+id/fragment_fan_stories_btn_post_story"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>


</RelativeLayout>